// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/azure/helpers getAzureBranchObj should get the branch object 1`] = `
Object {
  "name": "refs/heads/branchName",
  "oldObjectId": "132",
}
`;

exports[`platform/azure/helpers getAzureBranchObj should get the branch object when ref missing 1`] = `
Object {
  "name": "refs/heads/branchName",
  "oldObjectId": "0000000000000000000000000000000000000000",
}
`;

exports[`platform/azure/helpers getCommitDetails should get commit details 1`] = `
Object {
  "parents": Array [
    "123456",
  ],
}
`;

exports[`platform/azure/helpers getFile should return the file content because it is not a json 1`] = `"{\\"hello\\"= \\"test\\"}"`;

exports[`platform/azure/helpers getProjectAndRepo should return the object with project and repo 1`] = `
Object {
  "project": "prjName",
  "repo": "myRepoName",
}
`;

exports[`platform/azure/helpers getProjectAndRepo should return the object with same strings 1`] = `
Object {
  "project": "myRepoName",
  "repo": "myRepoName",
}
`;

exports[`platform/azure/helpers getRef should get the ref with full ref name 1`] = `
Array [
  Object {
    "objectId": "132",
  },
]
`;

exports[`platform/azure/helpers getRef should get the ref with short ref name 1`] = `
Array [
  Object {
    "objectId": 132,
  },
]
`;

exports[`platform/azure/helpers getRenovatePRFormat should be formated (closed v2) 1`] = `
Object {
  "body": undefined,
  "branchName": undefined,
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "isModified": false,
  "number": undefined,
  "state": "merged",
  "status": 3,
  "targetBranch": undefined,
}
`;

exports[`platform/azure/helpers getRenovatePRFormat should be formated (closed) 1`] = `
Object {
  "body": undefined,
  "branchName": undefined,
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "isModified": false,
  "number": undefined,
  "state": "closed",
  "status": 2,
  "targetBranch": undefined,
}
`;

exports[`platform/azure/helpers getRenovatePRFormat should be formated (isConflicted) 1`] = `
Object {
  "body": undefined,
  "branchName": undefined,
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "isConflicted": true,
  "isModified": false,
  "mergeStatus": 2,
  "number": undefined,
  "state": "open",
  "targetBranch": undefined,
}
`;

exports[`platform/azure/helpers getRenovatePRFormat should be formated (not closed) 1`] = `
Object {
  "body": undefined,
  "branchName": undefined,
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "isModified": false,
  "number": undefined,
  "state": "open",
  "status": 1,
  "targetBranch": undefined,
}
`;

exports[`platform/azure/helpers getStorageExtraCloneOpts should configure basic auth 1`] = `
Object {
  "--config": "http.extraheader=AUTHORIZATION: basic dXNlcjpwYXNz",
}
`;

exports[`platform/azure/helpers getStorageExtraCloneOpts should configure bearer token 1`] = `
Object {
  "--config": "http.extraheader=AUTHORIZATION: bearer token",
}
`;

exports[`platform/azure/helpers getStorageExtraCloneOpts should configure personal access token 1`] = `
Object {
  "--config": "http.extraheader=AUTHORIZATION: basic OjEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTI=",
}
`;

exports[`platform/azure/helpers max4000Chars should be the same 1`] = `"Hello"`;
